[project]
name = "mixed-strategy-sdn"
version = "0.1.0"
description = "Mixed Strategy-based optimization for Controller Node Placement"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ampl>=0.1",
    "amplpy>=0.15.2",
    "dotenv>=0.9.9",
    "ipython>=9.7.0",
    "jupyterlab>=4.5.0",
    "matplotlib>=3.10.7",
    "networkx>=3.6",
    "numpy>=2.3.5",
]
